    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)

  IMPROVEMENTS
    
    HAMA-286: Task progress should be monitored (eddieyoon)
    HAMA-287: BSPMaster should use the bsp.master.port config property
                       when creating its InetSocketAddr instance (Filipe Manana via edwardyoon)
    HAMA-283: Removing duplicate code (Filipe Manana via edwardyoon)
    HAMA-277: Add default number of bsp task (edwardyoon)
    HAMA-273: Implement killJob() method for local job (edwardyoon)
    HAMA-271: Add LocalJobRunner (edwardyoon)
    HAMA-264: Moving BlockID, Pair classes to examples package (edwardyoon)
    HAMA-269: Add getter for serverName to BSPPeerInterface (edwardyoon)
    HAMA-257: Design BSP program code interface (edwardyoon)
    HAMA-261: Remove meaningless unit tests (edwardyoon)
    HAMA-253: Change the blog link url (edwardyoon)
    HAMA-247: Discuss / Refactor HamaMaster and GroomServer (hyunsik)
    HAMA-239: Remove unused class (edwardyoon)
    HAMA-237: Add project blog link on website (edwardyoon)
    HAMA-236: Add recent news on website (edwardyoon)
    HAMA-232: Add file multiplication example (edwardyoon)
    HAMA-226: Add benchmarking tool of eigenvalue operation (edwardyoon)
    HAMA-223: Add simple admin tool for manage the temporary tables (edwardyoon)
    HAMA-202: Replacement for deprecated API of Map/Reduce (edwardyoon)
    HAMA-206: Replacement of JacobiEigenValueMap/Reduce (edwardyoon)
    HAMA-217: Replacement of Block Multiplication Map/Reduce (edwardyoon)
    HAMA-205: Replacement of NormMap/Reduce (edwardyoon)
    HAMA-207: Replacement of Mat-Mat addition Map/Reduce (edwardyoon)